...
                Alignment.CenterVertically
            ), horizontalAlignment = Alignment.CenterHorizontally
        ) {
            var aisleLocal by remember { mutableStateOf("") }

            TextField(
                modifier = Modifier.testTag("AisleNameTextField"),
                value = aisleLocal,
                onValueChange = { aisleLocal = it },
                label = { Text(text = "Aisle name") },
                placeholder = { Text(text = "Enter aisle name") },
                maxLines = 1,
                singleLine = true
            )

            Button(
                modifier = Modifier.testTag("addAisleButton"),
                onClick = { onValidate(); viewModel.addAisle(aisleLocal) }
            ) { Text(stringResource(R.string.validate_aisle)) }
        }
    }
}
