<resources>
    <string name="app_name">rebonnte</string>
    <string name="retry_login">Retry Login</string>
    <string name="cannot_access_if_not_logged_in">You cannot access the application if you are not logged in or if internet is disabled.</string>
    <string name="network_error">Network error, check your Internet connection</string>
    <string name="unknow_error">An unknown error occurred.</string>
    <string name="SuccessfulConnexion">Successful Connexion</string>
    <string name="error">Error Icon</string>
    <string name="valid_modifications">Validate Modifications</string>
    <string name="my_account_fragment_label">My account</string>
    <string name="logout">Sign out</string>
    <string name="delete_account">Delete account</string>
    <string name="popup_message_confirmation_delete_account">Are you sure you want to delete your account?</string>
    <string name="go_back">Go back</string>
    <string name="contentDescription_notification_icon">Icone de notification</string>
    <string name="delete_medicine">Delete medicine</string>
    <string name="popup_message_confirmation_delete_medicine">Delete the medicine? All history will also be deleted.</string>
    <string name="popup_message_choice_yes">Yes</string>
    <string name="popup_message_choice_no">No</string>
    <string name="delete_error_database">Error when deleting medication.</string>
    <string name="deleted_with_success">Successfully deleted.</string>
    <string name="delete_error_history">Error when deleting the history</string>
    <string name="name_from_to">name from %1$s to %2$s</string>
    <string name="aisle_from_to">aisle from %1$s to %2$s</string>
    <string name="stock_from_to">stock from %1$d to %2$d</string>
    <string name="modification_of">Modification of</string>
    <string name="you_haven_t_modified_anything">You haven\'t modified anything</string>
    <string name="error_medicine_name">Medicine name cannot be empty.</string>
    <string name="error_medicine_aisle">Please select an aisle.</string>
    <string name="error_medicine_stock">Stock must be a valid positive number.</string>
    <string name="add_medicine_title">Add New Medicine</string>
    <string name="medicine_name_label">Medicine Name</string>
    <string name="aisle_label">Aisle</string>
    <string name="select_aisle_placeholder">Select an Aisle</string>
    <string name="no_aisles_available">No aisles available</string>
    <string name="stock_label">Stock Quantity</string>
    <string name="validate">Save Medicine</string>
    <string name="add_aisle_title">Add New Aisle</string>
    <string name="validate_aisle">Save aisle</string>
    <string name="delete_aisle">Delete the Aisle</string>
    <string name="sign_in_cancelled">Sign In Cancelled</string>
    <string name="delete_aisle_without_medicine">Do you really want to delete the aisle?</string>
    <string name="moving_all_medicine">Moving All Medicine</string>
    <string name="delete_all_medicine">Delete All Medicine</string>
    <string name="do_you_really_want_to_do_delete_the_aisle">Do you really want to do delete the aisle %1$s ?</string>
    <string name="by_deleting_all_medicine">by eliminating all medications</string>
    <string name="by_moving_all_medicine">by moving all the drugs into %1$s</string>
    <string name="sort_options">Sort Options</string>
</resources>