...
                    )
                }
            },
        floatingActionButton = {
            Column(verticalArrangement = Arrangement.spacedBy(20.dp)) {
                FloatingActionButton(
                    modifier = Modifier.testTag("addAisleFabButton"),
                    onClick = {
                    addAisle()
                }) {
                    Icon(Icons.Default.Add, contentDescription = "Add")
                }
            }
...
            }
        } else if (aisles is Result.Success) {
            val aislesList = (aisles as Result.Success).data

            LazyColumn(
                modifier = Modifier
                    .testTag("LazyAisle")
                    .padding(paddingValues)
                    .fillMaxSize()
            ) {
                items(aislesList, key = { aisle -> aisle.id }) { aisle ->
                    AisleItem(aisle) {
                        goToDetail(aisle.id)
...
