...
                        selected = currentRoute(navController) == "aisle",
                        onClick = { navController.navigate("aisle") }
                    )
                    NavigationBarItem(
                        icon = { Icon(Icons.AutoMirrored.Filled.List, contentDescription = null) },
                        enabled = Firebase.auth.currentUser != null,
                        label = { Text("Medicine") },
                        selected = currentRoute(navController) == "medicine",
                        onClick = { navController.navigate("medicine") }
                    )
                    NavigationBarItem(
                        icon = { Icon(Icons.Filled.AccountCircle, contentDescription = null) },
                        enabled = Firebase.auth.currentUser != null,
                        label = { Text("Account") },
                        selected = currentRoute(navController) == "profile",
                        onClick = { navController.navigate("profile") }
                    )
                }
            }
        ) {
...
