...
    fun getAllAisles(): Flow<List<Aisle>> {
        return getAisleCollection().orderBy("name").snapshots().map { snapshot ->
                // Conversion des documents Firestore en objets Aisle
                val aisles = snapshot.documents.map { document ->
                    document.toObject(Aisle::class.java)!!.copy(id = document.id)
                }
                // Tri des allées pour que "Main aisle" soit en premier
                aisles.sortedBy { if (it.name == "Main aisle") 0 else 1 }
            }
    }

    /**
     * Récupère la liste des médicaments en temps réel, avec possibilité de trier ou filtrer selon différents critères.
...
            if (task.isSuccessful) {
                // Récupère les documents de la collection "medicines"
                val medicineDocs = task.result?.documents ?: emptyList()
                // Supprime chaque document de la collection "medicines" ayant l'allée correspondante
                medicineDocs.forEach { doc ->
                    if (doc.getString("nameAisle") == nameAisle) {
                        deleteMedicine(doc.id)
                    }
                }
            }
        }.continueWith { task ->
            // Après avoir supprimé les documents des médicaments, on supprime le document de l'allée
            aisleRef.delete()
...
