...
                    )

                }
            },
        floatingActionButton = {
            FloatingActionButton(
                modifier = Modifier.testTag("addMedicineFabButton"),
                onClick = {
                    addMedicine()
                }) {
                Icon(Icons.Default.Add, contentDescription = "Add")
            }
        }
...
                }
            }

            LazyColumn(
                state = listState,
                modifier = Modifier
                    .testTag("LazyMedicine")
                    .padding(paddingValues)
                    .fillMaxSize()
            ) {
                items(medicinesList, key = { medicine -> medicine.id }) { medicine ->
                    MedicineItem(medicine) {
                        goToDetail(medicine.id)
...
