...
                                contentDescription = stringResource(R.string.go_back)
                            )
                        }
                    },
                actions =
                    {
                        if (aisle?.name != "Main aisle" && medicines is Result.Success) {
                            IconButton(modifier = Modifier.testTag("deleteAisle"), onClick = {
                                showDeleteDialog = true
                            }) {
                                Icon(
                                    imageVector = Icons.Filled.Delete,
                                    contentDescription = stringResource(R.string.delete_aisle)
                                )
...
            }
        } else if (medicines is Result.Success) {
            LazyColumn(
                contentPadding = paddingValues,
                modifier = Modifier
                    .fillMaxSize()
                    .testTag("AisleDetailLazyMedicine"),
            ) {
                items(filteredMedicines, key = { medicine -> medicine.id }) { medicine ->
                    MedicineItem(medicine = medicine, onClick = { id ->
                        navigateToMedicineDetail(id)
                    })
                }
...
                            ) {
                                RadioButton(
                                    selected = (options.name == selectedOption),
                                    onClick = { onOptionSelected(options.name) },
                                    modifier = Modifier
                                        .testTag(
                                            if (options.name == deleteALl) "deleteAllRadio" else "movingAllRadio"
                                        )
                                )

                                if (options.name == movingAll) {
                                    Column(
                                        modifier = Modifier
...
